--- a/style.css
+++ b/style.css
@@ -157,4 +157,24 @@ body {
   line-height: 2;
 }
 
-/* Portfolio html page  */
+/* Portfolio html page ********************************************************************************** */
+
+.portfolio-button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  text-align: center;
+}
+
+.h-title {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2;
+  color: var(--second-color);
+}
+
+.p-title {
+  font-size: 16px;
+  line-height: 1.8;
+  color: var(--primary-text-color);
+}
