--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
 
 .web-title .link {
   color: var(--second-color);
+  text-decoration: none;
 }
 
 .web-title .link:hover,
@@ -47,6 +48,7 @@ body {
 
 .info-title a {
   color: var(--primary-text-color);
+  text-decoration: none;
 }
 .info-title a:hover,
 .info-title a:focus {
@@ -75,6 +77,7 @@ body {
   font-weight: bold;
   line-height: 1.8;
   text-align: center;
+  text-decoration: none;
 }
 
 /* section too */
@@ -94,6 +97,7 @@ body {
 .link:hover,
 .link:focus {
   color: var(--akcent-color);
+  text-decoration: none;
 }
 
 /*  What are we doing */
@@ -101,6 +105,7 @@ body {
 .what-doing {
   background-color: rgba(47, 48, 58, 0.8);
   color: var(--begraund-color);
+  text-decoration: none;
 }
 
 .what-we {
@@ -127,6 +132,17 @@ body {
   line-height: 1.2;
 }
 
+.color {
+  color: var(--primary-text-color);
+  text-decoration: none;
+}
+
+/* regular */
+
+.regular:hover {
+  background-color: var(--akcent-color);
+}
+
 /* footer */
 
 .footer {
@@ -149,12 +165,14 @@ body {
 .text {
   font-size: 14px;
   line-height: 1.7;
+  color: var(--begraund-color);
 }
 
 .adres-title {
   color: var(--info-color);
   font-size: 12px;
   line-height: 2;
+  text-decoration: none;
 }
 
 /* Portfolio html page ********************************************************************************** */
@@ -164,6 +182,16 @@ body {
   font-size: 16px;
   line-height: 1.6;
   text-align: center;
+}
+
+.decoration {
+  text-decoration: none;
+}
+
+.nav-portfolio:hover,
+.nav-portfolio:focus {
+  color: var(--begraund-color);
+  background-color: var(--akcent-color);
 }
 
 .h-title {
