--- a/style.css
+++ b/style.css
@@ -135,6 +135,13 @@ body {
   line-height: 1.2;
 }
 
+.subtitle {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  color: var(--primary-text-color);
+}
+
 .color {
   color: var(--primary-text-color);
   text-decoration: none;
